--- a/kadai1.html
+++ b/kadai1.html
@@ -20,7 +20,7 @@
     <button type="button" id="btn">実行</button>
 
     <p>【出力】</p>
-    <div id="fizzbuzz">
+    <div id="Fizzbuzz">
     </div>
 
     <script type="text/javascript" src="kadai1.js"></script>
